--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':appEpicOrg', ':ComputerGraphicsExample', ':test0', ':test1'
+include ':app', ':appEpicOrg', ':ComputerGraphicsExample', ':test0', ':test1', ':nodekeepertest'
