--- a/shariki/build.gradle
+++ b/shariki/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.1.1'
     testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:1.10.19'
+    testCompile "org.mockito:mockito-core:1+"
+    testCompile "org.robolectric:robolectric:2+"
     androidTestCompile 'org.hamcrest:hamcrest-library:1.1'
 }
