--- a/shariki/src/main/AndroidManifest.xml
+++ b/shariki/src/main/AndroidManifest.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.alessandro.computergraphicsexample" >
+    package="activities" >
 
     <application
         android:hardwareAccelerated="true"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Shariki"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:name="activities.MainActivity"
+            android:label="Shariki" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
