A little bug corrected in shariki which made retrieval of touched object a little buggy on my samsung galaxy s6. Trying to solve the "no opengl context" mistery.

--- a/runner/src/main/AndroidManifest.xml
+++ b/runner/src/main/AndroidManifest.xml
@@ -6,11 +6,11 @@
         android:hardwareAccelerated="true"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="runner"
+        android:label="Runner"
         android:theme="@style/AppTheme" >
         <activity
             android:name="activities.MainActivity"
-            android:label="runner" >
+            android:label="Runner">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
