--- a/runner/build.gradle
+++ b/runner/build.gradle
@@ -16,10 +16,26 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+            debuggable true
+        }
+
+
+    }
+    testOptions {
+        unitTests.returnDefaultValues = true
     }
 }
 
+repositories{
+    mavenCentral()
+}
+
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.1.1'
+    testCompile 'junit:junit:4.12'
+    testCompile "org.mockito:mockito-core:1+"
+    testCompile "org.robolectric:robolectric:2+"
+    androidTestCompile 'org.hamcrest:hamcrest-library:1.1'
 }
